--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 		var pow_last = '1465';
 		var ptemp = '';
 		
-		var tooltipThreshold = 8;
+		var tooltipThreshold = 9;
 		var lastZoom = 6;
 		
 		var pop_moving = false;
@@ -915,7 +915,8 @@
 		//console.log(lab_centers);
 		var plabels = {};
 		const tool_checked = 'color: rgba(160,32,32,1.0); font-size: 10pt; text-shadow: rgba(255,255,255,0.25) 2px 0px 0px, rgba(255,255,255,0.25) 1.75px 0.966667px 0px, rgba(255,255,255,0.25) 1.08333px 1.68333px 0px, rgba(255,255,255,0.25) 0.133333px 2px 0px, rgba(255,255,255,0.25) -0.833333px 1.81667px 0px, rgba(255,255,255,0.25) -1.6px 1.2px 0px, rgba(255,255,255,0.25) -1.98333px 0.283333px 0px, rgba(255,255,255,0.25) -1.86667px -0.7px 0px, rgba(255,255,255,0.25) -1.3px -1.51667px 0px, rgba(255,255,255,0.25) -0.416667px -1.95px 0px, rgba(255,255,255,0.25) 0.566667px -1.91667px 0px, rgba(255,255,255,0.25) 1.41667px -1.41667px 0px, rgba(255,255,255,0.25) 1.91667px -0.566667px 0px;';
-		const tool_unchecked = 'color: #fff; font-size: 8pt; text-shadow: rgba(32,32,32,0.75) 2px 0px 0px, rgba(32,32,32,0.75) 1.75px 0.966667px 0px, rgba(32,32,32,0.75) 1.08333px 1.68333px 0px, rgba(32,32,32,0.75) 0.133333px 2px 0px, rgba(32,32,32,0.75) -0.833333px 1.81667px 0px, rgba(32,32,32,0.75) -1.6px 1.2px 0px, rgba(32,32,32,0.75) -1.98333px 0.283333px 0px, rgba(32,32,32,0.75) -1.86667px -0.7px 0px, rgba(32,32,32,0.75) -1.3px -1.51667px 0px, rgba(32,32,32,0.75) -0.416667px -1.95px 0px, rgba(32,32,32,0.75) 0.566667px -1.91667px 0px, rgba(32,32,32,0.75) 1.41667px -1.41667px 0px, rgba(32,32,32,0.75) 1.91667px -0.566667px 0px;';
+		const tool_unchecked = 'color: #fff; font-size: 8.5pt; text-shadow: rgba(32,32,32,0.75) 2px 0px 0px, rgba(32,32,32,0.75) 1.75px 0.966667px 0px, rgba(32,32,32,0.75) 1.08333px 1.68333px 0px, rgba(32,32,32,0.75) 0.133333px 2px 0px, rgba(32,32,32,0.75) -0.833333px 1.81667px 0px, rgba(32,32,32,0.75) -1.6px 1.2px 0px, rgba(32,32,32,0.75) -1.98333px 0.283333px 0px, rgba(32,32,32,0.75) -1.86667px -0.7px 0px, rgba(32,32,32,0.75) -1.3px -1.51667px 0px, rgba(32,32,32,0.75) -0.416667px -1.95px 0px, rgba(32,32,32,0.75) 0.566667px -1.91667px 0px, rgba(32,32,32,0.75) 1.41667px -1.41667px 0px, rgba(32,32,32,0.75) 1.91667px -0.566667px 0px;';
+		var lbl = [];
 		layer_Powiaty_Simplified_2.eachLayer(function(layer) {
             //rank_Powiaty(layer);
 			var context = {
@@ -925,7 +926,7 @@
 			//var p = layer.getBounds().getCenter();
 			plabels[context.feature.properties.JPT_KOD_JE] = layer;
 			
-			layer.bindTooltip((label_Powiaty_Simplified_1_eval_expression(context) !== null?String('<div style="' + tool_unchecked + '">' + label_Powiaty_Simplified_1_eval_expression(context)) + '</div>':''), {pane: 'labels', permanent: true, offset: [0, 0], className: 'css_Powiaty_Simplified_1', direction:"center", opacity:1.0}).openTooltip(lab_centers[i]);
+			lbl[i] = layer.bindTooltip((label_Powiaty_Simplified_1_eval_expression(context) !== null?String('<div style="' + tool_unchecked + '">' + label_Powiaty_Simplified_1_eval_expression(context)) + '</div>':''), {pane: 'labels', permanent: true, offset: [0, 0], className: 'css_Powiaty_Simplified_1', direction:"center", opacity:1.0}).openTooltip(lab_centers[i]);
             labels.push(layer);
             totalMarkers += 1;
             layer.added = true;
@@ -4896,7 +4897,7 @@
 				layer.openTooltip(lab_centers[i]);
 				i++;
 			});
-			resetLabels([layer_Powiaty_Simplified_2]);
+			//resetLabels([layer_Powiaty_Simplified_2]);
 			
 			if (/*!filtered&&currentAttrValue!='#tab1'*/$select.val()=='Polska'){
 				layer_Okr_2.setStyle({color: 'rgba(80,80,80,1.0)'/*, fillColor: 'rgba(255,224,224,0.0)'*/, fillPattern: patt_blank});
@@ -4919,6 +4920,13 @@
 				//map.fitBounds(pow_ats[pow_].getBounds(), {paddingBottomRight: [400, 0], paddingTopLeft: [80, 0], animate: true, duration: 0.75});
 
 			}
+			var i = 0;
+			layer_Powiaty_Simplified_1.eachLayer(function(layer) {
+				layer.closeTooltip();
+				layer.openTooltip(lab_centers[i]);
+				i++;
+			});
+			resetLabels([layer_Powiaty_Simplified_1]);
 			
 		});
 		
@@ -4961,6 +4969,16 @@
 			//}, 600);
 			selected = false;
 			lastZoom = zoom;
+			var i = 0;
+			setTimeout(function () {
+				layer_Powiaty_Simplified_2.eachLayer(function(layer) {
+					var slbl = lbl[i].getTooltip();
+					slbl.setLatLng(lab_centers[i]);
+					i++;
+				});
+				resetLabels([layer_Powiaty_Simplified_2]);
+				
+			},50);
 		}
 		
 		map.on('zoomstart', function () {
@@ -5038,6 +5056,16 @@
 				//resetLabels([layer_Powiaty_Simplified_2]);
 				//map.spin(false);
 			}, 0);
+			var i = 0;
+			setTimeout(function () {
+				layer_Powiaty_Simplified_2.eachLayer(function(layer) {
+					var slbl = lbl[i].getTooltip();
+					slbl.setLatLng(lab_centers[i]);
+					i++;
+				});
+				resetLabels([layer_Powiaty_Simplified_2]);
+				
+			},50);
 			//px = map.project(layer_current.target._popup._latlng); // find the pixel location on the map where the popup anchor is
 			//block_centering = false;
 		});
